<resources>
    <string name="app_name">Contacts</string>
    <string name="add_contact">Add</string>
    <string name="enter_name_hint">Enter name</string>
    <string name="my_contacts">My Contacts</string>
    <string name="enter_number_hint">Enter number (+380..)</string>
    <string name="new_contact_menu">New contact menu</string>
    <string name="name">Name</string>
    <string name="start_number">+380</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="number">Number</string>
    <string name="user_logo">User logo</string>
    <string name="name_detail">"Name: "</string>
    <string name="number_detail">"Number: "</string>
    <string name="favourite">Favourite</string>
    <string name="all_contacts">All Contacts</string>
    <string name="favourites">Favourites</string>
    <string name="recent">Recent</string>
    <string name="edit">Edit</string>
    <string name="wrong_name">Wrong name</string>
    <string name="toast_same_name">Contact with such name already exists</string>
    <string name="wrong_number">Wrong number</string>
    <string name="contact_deleted">Contact has been deleted</string>
    <string name="edit_contact_menu">Edit contact menu</string>
    <string name="contact_updated">Contact has been updated</string>
</resources>